<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/txtClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/x"
            android:textSize="22sp"
            android:layout_marginTop="7dp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_books"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"/>


    </RelativeLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="166dp"
        android:layout_height="wrap_content"

        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/Enter"
        android:textColor="#fff"
        android:textSize="14sp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"/>

</LinearLayout>