<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:clickable="true"
    app:cardCornerRadius="5dp"
    android:elevation="10dp"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/no"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:text="@string/_1"
            android:textSize="21sp"
            android:textColor="#000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/nameCat"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/fisika"
            android:textSize="21sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>



        <ImageView
            android:id="@+id/editCategory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#fff"
            android:layout_marginEnd="39dp" />

        <ImageView
            android:id="@+id/deleteCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/todo" />



    </LinearLayout>

</androidx.cardview.widget.CardView>